--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,47 +1,55 @@
 @font-face {
     font-family: 'Heading Now';
-    src: url('/fonts/heading-now-76-bold.woff2') format('woff2'),
-         url('/fonts/heading-now-76-bold.woff') format('woff');
+    src: url('/fonts/heading_now/heading-now-76-bold.woff2') format('woff2'),
+    url('/fonts/heading_now/heading-now-76-bold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Heading Now';
-    src: url('/fonts/heading-now-76-bold-italic.woff2') format('woff2'),
-         url('/fonts/heading-now-76-bold-italic.woff') format('woff');
+    src: url('/fonts/heading_now/heading-now-76-bold-italic.woff2') format('woff2'),
+         url('/fonts/heading_now/heading-now-76-bold-italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Heading Now Lite';
-    src: url('/fonts/heading-now-74-regular.woff2') format('woff2'),
-         url('/fonts/heading-now-74-regular.woff') format('woff');
+    src: url('/fonts/heading_now/heading-now-74-regular.woff2') format('woff2'),
+         url('/fonts/heading_now/heading-now-74-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Burbank Black';
-    src: url('/fonts/burbank-black.woff2') format('woff2');
-    src: url('/fonts/burbank-black.woff') format('woff');
+    src: url('/fonts/burbank/burbank-small-black.woff2') format('woff2'),
+         url('/fonts/burbank/burbank-small-black.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Burbank Bold';
-    src: url('/fonts/burbank-bold.woff2') format('woff2');
-    src: url('/fonts/burbank-bold.woff') format('woff');
+    src: url('/fonts/burbank/burbank-small-bold.woff2') format('woff2'),
+         url('/fonts/burbank/burbank-small-bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Burbank Medium';
+    src: url('/fonts/burbank/burbank-small-medium.woff2') format('woff2'),
+         url('/fonts/burbank/burbank-small-medium.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Burbank Lite';
-    src: url('/fonts/burbank-lite.woff2') format('woff2');
-    src: url('/fonts/burbank-lite.woff') format('woff');
+    src: url('/fonts/burbank/burbank-small-lite.woff2') format('woff2'),
+         url('/fonts/burbank/burbank-small-lite.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
