--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,5 @@
 html {
-    font-family: 'Heading Now', Tahoma, sans-serif;
+    font-family: 'HeadingNowVar', Tahoma, sans-serif;
     color: white;
 }
 .font-override-black {
